--- a/Code/back-end/package.json
+++ b/Code/back-end/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "http": "^0.0.1-security",
     "mongoose": "^8.0.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "socket.io": "^4.7.2",
+    "websocket": "^1.0.34"
   }
 }
