--- a/Code/frontend/package.json
+++ b/Code/frontend/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
+    "ws": "^8.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
