--- a/Code/back-end/package.json
+++ b/Code/back-end/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -12,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
@@ -19,6 +22,7 @@
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.3",
     "websocket": "^1.0.34"
   }
 }
