--- a/Code/frontend/package.json
+++ b/Code/frontend/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.7.2",
+    "react-use-websocket": "^3.0.0",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34",
     "ws": "^8.15.1"
@@ -20,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha --require @babel/register src/**/*.test.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,5 +44,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/register": "^7.23.7",
+    "mocha": "^10.2.0"
   }
 }
