--- a/Code/back-end/package.json
+++ b/Code/back-end/package.json
@@ -4,25 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha */App.test.js",
     "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "@babel/preset-react": "^7.23.3",
+    "@testing-library/react": "^14.1.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "http": "^0.0.1-security",
+    "jsonschema": "^1.4.1",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.3",
+    "text-encoding": "^0.7.0",
     "websocket": "^1.0.34"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "babel-jest": "^29.7.0",
+    "chai": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mocha": "^10.2.0",
+    "mongodb-memory-server": "^9.1.4",
+    "sinon": "^17.0.1",
+    "supertest": "^6.3.3"
   }
 }
