--- a/Code/package.json
+++ b/Code/package.json
@@ -63,5 +63,10 @@
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
