--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,12 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: /CODE/frontend
+      working-directory: /Code/frontend
 
     - name: Build
       run: npm run build
-      working-directory: /code/frontend
+      working-directory: /Code/frontend
 
     - name: Run tests
       run: npm test
-      working-directory: /code/frontend
+      working-directory: /Code/frontend
